# machining_tools_identification

./: .gitignore  LICENSE  README.md  inference_time.py  provider.py  pyproject.toml  requirements.txt  test_classification_tools_L.py  test_classification_tools_S.py  train_classification_tools_L.py  train_classification_tools_S.py
data_utils/: LargeToolsDataLoader.py  SmallToolsDataLoader.py
models/: pointnet2_cls_ssg.py  pointnet2_utils.py  pointnet_cls.py  pointnet_cls_def_less.py  pointnet_cls_less.py  pointnet_cls_more.py  pointnet_utils.py
